# liftoff-rs

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md  user-install.sh
autopilot/: Cargo.toml
autopilot/src/: main.rs  mavlink_interface.rs
crsf-forward/: Cargo.toml
crsf-forward/src/: main.rs
crsf-gpsd/: Cargo.toml
crsf-gpsd/src/: main.rs
crsf-joystick/: Cargo.toml
crsf-joystick/src/: lib.rs  main.rs
crsf-mavlink-bridge/: Cargo.toml
crsf-mavlink-bridge/src/: main.rs
doc/: fc-autopilot-interface-investigation.md  godot-swarm-sim-plan.md  setup.md  systemd.md  velocidrone-websocket-api.md
edgetx/: README.md  damage_bw.lua  damage_color.lua  dmgbw.lua  dmgcol.lua  dmgfig.lua
godot-swarm-sim/: .gitignore  README.md  build.sh  smoke-test.py  zenoh-smoke-test.py
godot-swarm-sim/godot/: drones.json  project.godot
godot-swarm-sim/godot/addons/godot-swarm-sim/: godot-swarm-sim.gdextension  godot-swarm-sim.gdextension.uid
godot-swarm-sim/godot/presets/: racing_5inch.tres
godot-swarm-sim/godot/scenes/: drone.tscn  world.tscn
godot-swarm-sim/godot/scripts/: camera_director.gd  camera_director.gd.uid  world.gd  world.gd.uid
godot-swarm-sim/rust/: Cargo.toml
godot-swarm-sim/rust/src/: arming.rs  crsf_io.rs  crsf_io_trait.rs  damage.rs  drone.rs  godot_input_interface.rs  input_router.rs  input_stub.rs  lib.rs  pipeline.rs  preset.rs  preset_resource.rs  rc_input.rs  sensor_sim.rs  wake_node.rs  zenoh_interface.rs  zenoh_io.rs
godot-swarm-sim/rust/src/fc/: mixer.rs  mod.rs  mode.rs  pid.rs  rates.rs
godot-swarm-sim/rust/src/physics/: battery.rs  drag.rs  ground.rs  mod.rs  motor.rs  thrust.rs  wake.rs
liftoff-autopilot/: Cargo.toml
liftoff-autopilot/src/: main.rs  mavlink_interface.rs
liftoff-bridge/: Cargo.toml
liftoff-bridge/src/: main.rs
liftoff-dashboard/: Cargo.toml
liftoff-dashboard/src/: main.rs
liftoff-forward/: Cargo.toml
liftoff-forward/src/: main.rs
liftoff-gpsd/: Cargo.toml
liftoff-gpsd/src/: main.rs
liftoff-input/: Cargo.toml
liftoff-input/src/: main.rs
liftoff-lib/: Cargo.toml
liftoff-lib/src/: crsf.rs  crsf_custom.rs  crsf_tx.rs  geo.rs  lib.rs  router_protocol.rs  simstate.rs  telemetry.rs  topics.rs
liftoff-mavlink-bridge/: Cargo.toml
liftoff-mavlink-bridge/src/: main.rs
liftoff-router/: Cargo.toml
liftoff-router/src/: main.rs
liftoff-simstate-bridge/: LiftoffSimstateBridge.csproj  NuGet.Config  README.md  test_client.py
liftoff-simstate-bridge/src/: Plugin.cs
mavlink-bridge/: Cargo.toml
mavlink-bridge/src/: main.rs
src/: arming.rs  controller.rs  mixer.rs  rates.rs
systemd/: autopilot.service  crsf-forward.service  crsf-gpsd.service  crsf-joystick.service  crsf-mavlink-bridge.service  dronesim-autopilot.service  dronesim-crsf-forward.service  dronesim-crsf-gpsd.service  dronesim-crsf-joystick.service  dronesim-liftoff-input.service  dronesim-mavlink-bridge.service  dronesim-uncrashed-input.service  dronesim-velocidrone-input.service  dronesim.target  liftoff-autopilot.service  liftoff-forward.service  liftoff-gpsd.service  liftoff-input.service  liftoff-mavlink-bridge.service  liftoff.target  mavlink-bridge.service  zenohd.service
telemetry-dashboard/: Cargo.toml
telemetry-dashboard/src/: main.rs
telemetry-lib/: Cargo.toml
telemetry-lib/src/: crsf.rs  telemetry.rs  topics.rs
test/: README.md  inject_damage.py
uncrashed-input/: Cargo.toml  README.md
uncrashed-input/src/: main.rs  wire.rs
uncrashed-telemetry-mod/: .gitignore  README.md
uncrashed-telemetry-mod/scripts/: main.lua
velocidrone-input/: Cargo.toml
velocidrone-input/src/: main.rs
