[workspace]
resolver = "2"
members = [
    "liftoff-lib",
    "liftoff-input",
    "liftoff-router",
    "liftoff-gpsd",
    "liftoff-forward",
]

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
liftoff-lib = { path = "liftoff-lib" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
metrics = "0.24.3"
metrics-exporter-tcp = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
