[workspace]
resolver = "2"
members = [
    "telemetry-lib",
    "liftoff-input",
    "crsf-gpsd",
    "crsf-forward",
    "crsf-joystick",
    "autopilot",
    "mavlink-bridge",
    "telemetry-dashboard",
    "velocidrone-input",
    "uncrashed-input",
]

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
telemetry-lib = { path = "telemetry-lib" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
metrics = "0.24.3"
metrics-exporter-tcp = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-tungstenite = "0.24"
futures-util = "0.3"
zenoh = { version = "1", default-features = false, features = ["transport_udp"] }
