[package]
name = "autopilot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
telemetry-lib = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
nalgebra = "0.33.2"
zenoh = { workspace = true }
mavlink = { version = "0.14", default-features = false, features = ["common", "std"] }

