[package]
name = "liftoff-forward"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
liftoff-lib = { version = "0.1.0", path = "../liftoff-lib" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
tokio-serial = "5.4.5"
metrics = "0.24.3"
metrics-exporter-tcp = "0.11.1"
