[package]
name = "liftoff-forward"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
liftoff-lib = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-serial = "5.4.5"
metrics = { workspace = true }
metrics-exporter-tcp = { workspace = true }
