[package]
name = "liftoff-gpsd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
liftoff-lib = { version = "0.1.0", path = "../liftoff-lib" }
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
metrics = "0.24.3"
metrics-exporter-tcp = "0.11.1"
