[package]
name = "liftoff-input"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
evdev = "0.13.2"
liftoff-lib = { version = "0.1.0", path = "../liftoff-lib" }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
