[package]
name = "liftoff-input"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
evdev = "0.13.2"
liftoff-lib = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
metrics-exporter-tcp = { workspace = true }
