[package]
name = "liftoff-router"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics = { workspace = true }
metrics-exporter-tcp = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
liftoff-lib = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
